# HomeSteadOS

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  SPRINTS.md  VISION.md  pyproject.toml
.github/workflows/: tests.yml
configs/: demo_automations.json  demo_home.json  demo_scenes.json  demo_shortcuts.json  home_assistant_sample.json
docs/decisions/: ADR-0001-Core-Architecture.md
docs/hardware/: HOME_ASSISTANT_SETUP.md
docs/product/: DEMO_WORKFLOW.md.py  FRONTEND_PLAN.md  PRD.md  V1_SCOPE.md  VERSION_ROADMAP.md
scripts/: check_home_assistant.py
src/homesteados/: runtime.py
tests/: test_action_description_service.py  test_action_dispacter.py  test_action_dispatcher.py  test_adapter_registry.py  test_api.py  test_audit_log_service.py  test_automation_config_loader.py  test_automation_service.py  test_behaviour_insight_service.py  test_cli_command_parser.py  test_command_history_service.py  test_command_suggestion_service.py  test_confirmation_service.py  test_device_model.py  test_device_registry.py  test_diagnostics_services.py  test_event_bus.py  test_home_assistant_adapter.py  test_home_config_loader.py  test_home_model.py  test_lighting_service.py  test_lighting_service_events.py  test_logging_config.py  test_room_registry.py  test_room_service.py  test_runtime.py  test_safety_engine.py  test_scene_config_loader.py  test_scene_service.py  test_settings.py  test_shortcut_config_loader.py  test_shortcut_service.py  test_simulated_device_adapter.py  test_system_service.py  test_system_snapshot_service.py  test_text_command_service.py
(+60 files in other folders)
