[project]
name = "homesteados"
version = "0.1.0"
description = "A local-first AI home operating system."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Liam" }
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
homesteados = "homesteados.interfaces.cli.main:main"